--- a/20210310.md
+++ b/20210310.md
@@ -1,3 +1,13 @@
 # Meeting Minutes
 
 ## Ratsinformationssystem
+
+Warten auf Rückmeldung von der Stadt
+
+## Vogel Beobachtungs Projekte
+
+Gehen stetig vorran. Aktuell ein Live Stream in Aktion.
+
+## Wasserstandsbeobachtung 
+
+Ein Member hat ein laufendes System
